# nof_2023

./: .gitattributes  .gitignore  README.md  flake.nix  pyproject.toml
notebooks/: part1.ipynb  part2.ipynb  part3.ipynb
