[tool.poetry]
name = "nof-2023"
version = "0.1.0"
description = "Tutorial materials for *FL x Security in Network Management* at NoF 2023"
authors = ["phdcybersec <82591009+phdcybersec@users.noreply.github.com>"]
readme = "README.md"
packages = [
    {include = "nof_2023", from = "."},
]

[tool.poetry.dependencies]

# tensorflow macos
tensorflow-metal = "~0.6.0"
tensorflow-macos = "~2.10.0"
grpcio = ">=1.37.0,<2.0"
h5py = ">=3.6.0,<3.7"
numpy = ">=1.23.2,<1.23.3"
protobuf = ">=3.19.1,<3.20"

python = "~3.10"
hydra-core = "^1.3.2"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
flwr = { extras = ["simulation"], version = "^1.5.0" }
matplotlib = "^3.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = { extras = ["jupyter"], version = "^23.3.0" }
isort = "^5.12.0"
autoflake = "^2.1.1"
ipykernel = "^6.25.2"
ipython = "^8.15.0"
ipywidgets = "^8.1.1"
jupyter = "^1.0.0"

[tool.ruff]
select = ["D"]
include = ["*.py", "*.pyi", "pyproject.toml", "*.ipynb"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
